// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pokemons renders the component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 1000px;
  margin: 0 auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),0 4px 6px -2px rgba(0, 0, 0, 0.05);
  border-radius: 1.5rem;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  -webkit-transition: 0.1 all ease-in-out;
  transition: 0.1 all ease-in-out;
  background: #ffffff;
  color: #193569;
  margin: 0 10px 10px 0;
  height: 160px;
  width: 160px;
}

.emotion-2>span {
  font-size: 0.9rem;
  margin-top: 2px;
}

@media (min-width: 720px) {
  .emotion-2 {
    height: 180px;
    width: 180px;
    margin: 0 15px 15px 0;
  }
}

.emotion-2:hover {
  -webkit-transform: translateY(-3px);
  -moz-transform: translateY(-3px);
  -ms-transform: translateY(-3px);
  transform: translateY(-3px);
  -webkit-transition: 0.1s all ease-in-out;
  transition: 0.1s all ease-in-out;
}

.emotion-4 {
  font-family: Inter,sans-serif;
  font-weight: bold;
  text-transform: capitalize;
}

.emotion-6 {
  position: absolute;
  opacity: 0.08;
  bottom: -58px;
  right: -60px;
  height: 200px;
}

.emotion-32 {
  background-color: #193569;
  border-radius: 0.5em;
  border: none;
  padding: 1em 1.2em;
  font-size: 1rem;
  font-weight: bold;
  color: #FDC903;
  cursor: pointer;
  -webkit-transition: 0.15s all ease-in-out;
  transition: 0.15s all ease-in-out;
  outline: none;
}

.emotion-32:hover {
  background-color: #152c57;
  -webkit-transition: 0.15s all ease-in-out;
  transition: 0.15s all ease-in-out;
}

<body>
    <div>
      <div
        style="padding: 4rem 0px;"
      >
        <div
          class="emotion-0 emotion-1"
        >
          <a
            class="emotion-2 emotion-3"
          >
            <img
              alt="bulbasaur"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
            />
            <div
              class="emotion-4 emotion-5"
            >
              bulbasaur
            </div>
            <span>
              You have: 
              0
            </span>
            <img
              alt="Pokeball"
              class="emotion-6 emotion-7"
              src="/pokeball.svg"
            />
          </a>
          <a
            class="emotion-2 emotion-3"
          >
            <img
              alt="ivysaur"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png"
            />
            <div
              class="emotion-4 emotion-5"
            >
              ivysaur
            </div>
            <span>
              You have: 
              0
            </span>
            <img
              alt="Pokeball"
              class="emotion-6 emotion-7"
              src="/pokeball.svg"
            />
          </a>
          <a
            class="emotion-2 emotion-3"
          >
            <img
              alt="venusaur"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png"
            />
            <div
              class="emotion-4 emotion-5"
            >
              venusaur
            </div>
            <span>
              You have: 
              0
            </span>
            <img
              alt="Pokeball"
              class="emotion-6 emotion-7"
              src="/pokeball.svg"
            />
          </a>
          <a
            class="emotion-2 emotion-3"
          >
            <img
              alt="charmander"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png"
            />
            <div
              class="emotion-4 emotion-5"
            >
              charmander
            </div>
            <span>
              You have: 
              0
            </span>
            <img
              alt="Pokeball"
              class="emotion-6 emotion-7"
              src="/pokeball.svg"
            />
          </a>
          <a
            class="emotion-2 emotion-3"
          >
            <img
              alt="charmeleon"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/5.png"
            />
            <div
              class="emotion-4 emotion-5"
            >
              charmeleon
            </div>
            <span>
              You have: 
              0
            </span>
            <img
              alt="Pokeball"
              class="emotion-6 emotion-7"
              src="/pokeball.svg"
            />
          </a>
        </div>
        <div
          style="width: 100%; text-align: center; margin-top: 2rem;"
        >
          <button
            class="emotion-32 emotion-33"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 1000px;
  margin: 0 auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),0 4px 6px -2px rgba(0, 0, 0, 0.05);
  border-radius: 1.5rem;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  -webkit-transition: 0.1 all ease-in-out;
  transition: 0.1 all ease-in-out;
  background: #ffffff;
  color: #193569;
  margin: 0 10px 10px 0;
  height: 160px;
  width: 160px;
}

.emotion-2>span {
  font-size: 0.9rem;
  margin-top: 2px;
}

@media (min-width: 720px) {
  .emotion-2 {
    height: 180px;
    width: 180px;
    margin: 0 15px 15px 0;
  }
}

.emotion-2:hover {
  -webkit-transform: translateY(-3px);
  -moz-transform: translateY(-3px);
  -ms-transform: translateY(-3px);
  transform: translateY(-3px);
  -webkit-transition: 0.1s all ease-in-out;
  transition: 0.1s all ease-in-out;
}

.emotion-4 {
  font-family: Inter,sans-serif;
  font-weight: bold;
  text-transform: capitalize;
}

.emotion-6 {
  position: absolute;
  opacity: 0.08;
  bottom: -58px;
  right: -60px;
  height: 200px;
}

.emotion-32 {
  background-color: #193569;
  border-radius: 0.5em;
  border: none;
  padding: 1em 1.2em;
  font-size: 1rem;
  font-weight: bold;
  color: #FDC903;
  cursor: pointer;
  -webkit-transition: 0.15s all ease-in-out;
  transition: 0.15s all ease-in-out;
  outline: none;
}

.emotion-32:hover {
  background-color: #152c57;
  -webkit-transition: 0.15s all ease-in-out;
  transition: 0.15s all ease-in-out;
}

<div>
    <div
      style="padding: 4rem 0px;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <a
          class="emotion-2 emotion-3"
        >
          <img
            alt="bulbasaur"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
          />
          <div
            class="emotion-4 emotion-5"
          >
            bulbasaur
          </div>
          <span>
            You have: 
            0
          </span>
          <img
            alt="Pokeball"
            class="emotion-6 emotion-7"
            src="/pokeball.svg"
          />
        </a>
        <a
          class="emotion-2 emotion-3"
        >
          <img
            alt="ivysaur"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png"
          />
          <div
            class="emotion-4 emotion-5"
          >
            ivysaur
          </div>
          <span>
            You have: 
            0
          </span>
          <img
            alt="Pokeball"
            class="emotion-6 emotion-7"
            src="/pokeball.svg"
          />
        </a>
        <a
          class="emotion-2 emotion-3"
        >
          <img
            alt="venusaur"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png"
          />
          <div
            class="emotion-4 emotion-5"
          >
            venusaur
          </div>
          <span>
            You have: 
            0
          </span>
          <img
            alt="Pokeball"
            class="emotion-6 emotion-7"
            src="/pokeball.svg"
          />
        </a>
        <a
          class="emotion-2 emotion-3"
        >
          <img
            alt="charmander"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png"
          />
          <div
            class="emotion-4 emotion-5"
          >
            charmander
          </div>
          <span>
            You have: 
            0
          </span>
          <img
            alt="Pokeball"
            class="emotion-6 emotion-7"
            src="/pokeball.svg"
          />
        </a>
        <a
          class="emotion-2 emotion-3"
        >
          <img
            alt="charmeleon"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/5.png"
          />
          <div
            class="emotion-4 emotion-5"
          >
            charmeleon
          </div>
          <span>
            You have: 
            0
          </span>
          <img
            alt="Pokeball"
            class="emotion-6 emotion-7"
            src="/pokeball.svg"
          />
        </a>
      </div>
      <div
        style="width: 100%; text-align: center; margin-top: 2rem;"
      >
        <button
          class="emotion-32 emotion-33"
        >
          Load more
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pokemons renders the pokemons 1`] = `
.emotion-0 {
  font-family: Inter,sans-serif;
  font-weight: bold;
  text-transform: capitalize;
}

<div
  class="emotion-0 emotion-1"
>
  bulbasaur
</div>
`;

exports[`Pokemons renders the pokemons 2`] = `
.emotion-0 {
  font-family: Inter,sans-serif;
  font-weight: bold;
  text-transform: capitalize;
}

<div
  class="emotion-0 emotion-1"
>
  ivysaur
</div>
`;

exports[`Pokemons renders the pokemons 3`] = `
.emotion-0 {
  font-family: Inter,sans-serif;
  font-weight: bold;
  text-transform: capitalize;
}

<div
  class="emotion-0 emotion-1"
>
  venusaur
</div>
`;

exports[`Pokemons renders the pokemons 4`] = `
.emotion-0 {
  font-family: Inter,sans-serif;
  font-weight: bold;
  text-transform: capitalize;
}

<div
  class="emotion-0 emotion-1"
>
  charmander
</div>
`;

exports[`Pokemons renders the pokemons 5`] = `
.emotion-0 {
  font-family: Inter,sans-serif;
  font-weight: bold;
  text-transform: capitalize;
}

<div
  class="emotion-0 emotion-1"
>
  charmeleon
</div>
`;
